--- a/frontend/src/styles/Layout.module.css
+++ b/frontend/src/styles/Layout.module.css
@@ -22,6 +22,17 @@
   align-items: center;
 }
 
+.footer {
+  display: flex;
+  flex-direction: row;           
+  justify-content: space-between;
+  align-items: center;
+  background: var(--background);
+  height: auto;
+  padding: 1rem 2rem;
+  border-top: 1px solid #D9D9D9; 
+}
+
 @media (max-width: 420px) {
   .header {
     flex-direction: column;
