chore: product details page

--- a/frontend/src/styles/Dpp.module.css
+++ b/frontend/src/styles/Dpp.module.css
@@ -1,13 +1,10 @@
-.requestPermission {
+.requestPermissionCard {
 
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 16px;
     gap: 16px;
-
-    width: 328px;
-    height: 127px;
 
     background: #DDE9F7;
     border-radius: 12px;
@@ -16,7 +13,85 @@
     order: 0;
     align-self: stretch;
     flex-grow: 0;
+    width: 100%;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
 }
+
+.addDppCard {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16px;
+    gap: 16px;
+
+    background: #C2F1F4;
+    border-radius: 12px;
+
+    flex: none;
+    order: 0;
+    align-self: stretch;
+    flex-grow: 0;
+    width: 100%;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+}
+
+.addDpp {
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16px;
+    gap: 16px;
+
+    background: #C2F1F4;
+    border-radius: 12px;
+
+    flex: none;
+    order: 0;
+    align-self: stretch;
+    flex-grow: 0;
+}
+
+.addButton{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 16px;
+    isolation: isolate;
+
+    width: 144px;
+    min-width: 80px;
+    height: 36px;
+
+    background: #3131FF;
+    border-radius: 120px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.addButtonText {
+    width: 97px;
+    height: 16px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: -0.1px;
+    font-feature-settings: 'ss01' on;
+    color: #FFFFFF;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
 
 .requestButton{
     display: flex;
