--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -141,3 +141,18 @@ a {
   order: 1;
   flex-grow: 0;
 }
+
+.popup-card{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  width: 100%;
+  background: #FFFFFF;
+  border-radius: 16px;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+
+  }
