--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -11,8 +11,8 @@
   /* --card-foreground: oklch(0.145 0 0); */
   /* --popover: oklch(1 0 0); */
   /* --popover-foreground: oklch(0.145 0 0); */
-  /* --primary: #030213; */
-  /* --primary-foreground: oklch(1 0 0); */
+  --primary: #030213;
+  --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.95 0.0058 264.53);
   --secondary-foreground: #030213;
   /* --muted: #ececf0; */
@@ -27,7 +27,7 @@
   /* --switch-background: #cbced4; */
   /* --font-weight-medium: 500; */
   /* --font-weight-normal: 400; */
-  /* --ring: oklch(0.708 0 0); */
+  --ring: oklch(0.708 0 0);
 
   /* Chart Colors */
   /* --chart-1: oklch(0.646 0.222 41.116); */
@@ -96,8 +96,8 @@
 /*   --color-card-foreground: var(--card-foreground); */
 /*   --color-popover: var(--popover); */
 /*   --color-popover-foreground: var(--popover-foreground); */
-/*   --color-primary: var(--primary); */
-/*   --color-primary-foreground: var(--primary-foreground); */
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
 /*   --color-muted: var(--muted); */
