refactor: adjust ServiceRequestModal

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -5,7 +5,7 @@
 :root {
   /* Base Variables */
   --font-size: 14px;
-  /* --background: #ffffff; */
+  --background: #ffffff;
   /* --foreground: oklch(0.145 0 0); */
   /* --card: #ffffff; */
   /* --card-foreground: oklch(0.145 0 0); */
@@ -21,7 +21,7 @@
   --accent-foreground: #030213;
   /* --destructive: #d4183d; */
   /* --destructive-foreground: #ffffff; */
-  /* --border: rgba(0, 0, 0, 0.1); */
+  --border: rgba(0, 0, 0, 0.1);
   /* --input: transparent; */
   /* --input-background: #f3f3f5; */
   /* --switch-background: #cbced4; */
@@ -90,7 +90,7 @@
 }
 
 @theme inline {
-/*   --color-background: var(--background); */
+  --color-background: var(--background);
 /*   --color-foreground: var(--foreground); */
 /*   --color-card: var(--card); */
 /*   --color-card-foreground: var(--card-foreground); */
@@ -106,7 +106,7 @@
   --color-accent-foreground: var(--accent-foreground);
 /*   --color-destructive: var(--destructive); */
 /*   --color-destructive-foreground: var(--destructive-foreground); */
-  /* --color-border: var(--border); */
+  --color-border: var(--border);
 /*   --color-input: var(--input); */
 /*   --color-input-background: var(--input-background); */
 /*   --color-switch-background: var(--switch-background); */
