refactor: enable loading bar with animation

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -142,6 +142,17 @@ html {
   }
 }
 
+@keyframes slideInUp {
+  from {
+    transform: translateY(15%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 /* Utility classes */
 /* .flex { display: flex; } */
 /* .flex-col { flex-direction: column; } */
