--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -174,6 +174,13 @@ html {
 /* .relative { position: relative; } */
 /* .absolute { position: absolute; } */
 
+div.summarize p {
+  width: 30ch;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /* Directives for theme preference */
 /* @media (prefers-color-scheme: dark) { */
 /*   :root { */
